# catenaryCalculator

./: .flake8  .gitignore  .pre-commit-config.yaml  CARNET_TERRAIN.md  CHANGELOG.md  Makefile  README.md  calcoloFune.md  calcul_papoto.md  changelogs.md  donnee_papoto.md  main.py  pyproject.toml  test.txt
js-version/: index.html  script.js  server.js  style.css
old_code/: CARNET_TERRAIN.md  calcoloFune.md  calcul_papoto.md  donnee_papoto.md
tests/: test_main.py
